# url-shortener

./: .gitignore
.claude/commands/: architecture-review.md  erd-review.md  prd-review.md
.claude/run/: 2026-05-25-architecture-review.md  2026-05-25-erd-review-v2.md  2026-05-25-erd-review.md  2026-05-25-prd-review-v2.md  2026-05-25-prd-review-v3.md  2026-05-25-prd-review.md  2026-06-01-architecture-review-low-run2.md  2026-06-01-architecture-review-low.md  2026-06-01-architecture-review-max-run2.md  2026-06-01-architecture-review-max.md  2026-06-01-architecture-review-medium-run2.md  2026-06-01-architecture-review-medium.md  2026-06-01-architecture-review-v3.md  2026-06-01-effort-comparison.md  2026-06-01-erd-review-low-run2.md  2026-06-01-erd-review-low.md  2026-06-01-erd-review-max-run2.md  2026-06-01-erd-review-max.md  2026-06-01-erd-review-medium-run2.md  2026-06-01-erd-review-medium.md  2026-06-01-erd-review-v3.md  2026-06-01-prd-review-low-run2.md  2026-06-01-prd-review-low.md  2026-06-01-prd-review-max-run2.md  (+64 more)
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  crypto.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py  redis_client.py
backend/app/models/: __init__.py  abuse_review.py  base.py  click.py  email_suppression.py  invite.py  link.py  mixpanel_dead_letter.py  tokens.py  user.py  workspace.py
backend/app/routers/: abuse.py  analytics.py  auth.py  health.py  links.py  workspaces.py
backend/app/schemas/: abuse.py  analytics.py  auth.py  link.py  workspace.py
backend/app/services/: email_service.py  mixpanel.py  pwned_passwords.py  rate_limiter.py  safe_browsing.py  session.py
backend/app/workers/: click_consumer.py  mail_worker.py  mixpanel_forwarder.py
backend/tests/: conftest.py  test_auth.py  test_links.py  test_workspaces.py
docs/: architecture.md  erd.md  prd.md
(+3 files in other folders)
